// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddIntegration: index mapStateToProps with default state 1`] = `
Object {
  "initialValues": Object {
    "chainId": "",
    "name": "",
  },
  "isOpen": true,
}
`;

exports[`AddIntegration: index render component (Oauth mode) form fields with values 1`] = `
Object {
  "chainId": "",
  "errors": null,
  "form": Object {},
  "name": "",
}
`;

exports[`AddIntegration: index render component (Oauth mode) form fields with values 2`] = `
Object {
  "chainId": "deadbeef",
  "errors": null,
  "form": Object {},
  "name": "bank",
}
`;

exports[`AddIntegration: index render component (Oauth mode) with empty values 1`] = `
"<div>
  <Blueprint.Button onClick={[Function: onClick]} className=\\"pt-intent-primary pt-icon-add\\" style={{...}} text=\\"Add App Integration\\" />
  <Blueprint.Dialog iconName=\\"add\\" isOpen={false} onClose={[Function]} title=\\"Add App Integration\\" className=\\"pt-dark\\" canOutsideClickClose={true}>
    <form>
      <div className=\\"pt-dialog-body\\">
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              Name:
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <Field id=\\"name\\" className=\\"form-width pt-input\\" placeholder=\\"Name\\" name=\\"name\\" component=\\"input\\" dir=\\"auto\\" title=\\"name\\" onChange={[Function: onChange]} required={true} />
            <br />
            <span className=\\"error-text\\" />
          </div>
        </div>
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              App Chain ID:
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <div className=\\"form-width\\">
              <Field name=\\"chainId\\" component=\\"input\\" type=\\"text\\" placeholder=\\"App Chain ID\\" value=\\"\\" className=\\"pt-input form-width\\" onChange={[Function: onChange]} required={true} />
              <br />
              <span className=\\"error-text\\" />
            </div>
          </div>
        </div>
      </div>
      <div className=\\"pt-dialog-footer\\">
        <div className=\\"pt-dialog-footer-actions\\">
          <Blueprint.Button text=\\"Cancel\\" onClick={[Function: onClick]} />
          <Blueprint.Button intent={0} onClick={[Function]} text=\\"Add App Integration\\" />
        </div>
      </div>
    </form>
  </Blueprint.Dialog>
</div>"
`;

exports[`AddIntegration: index render component (Oauth mode) with values 1`] = `
"<div>
  <Blueprint.Button onClick={[Function: onClick]} className=\\"pt-intent-primary pt-icon-add\\" style={{...}} text=\\"Add App Integration\\" />
  <Blueprint.Dialog iconName=\\"add\\" isOpen={false} onClose={[Function]} title=\\"Add App Integration\\" className=\\"pt-dark\\" canOutsideClickClose={true}>
    <form>
      <div className=\\"pt-dialog-body\\">
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              Name:
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <Field id=\\"name\\" className=\\"form-width pt-input\\" placeholder=\\"Name\\" name=\\"name\\" component=\\"input\\" dir=\\"auto\\" title=\\"name\\" onChange={[Function: onChange]} required={true} />
            <br />
            <span className=\\"error-text\\" />
          </div>
        </div>
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              App Chain ID:
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <div className=\\"form-width\\">
              <Field name=\\"chainId\\" component=\\"input\\" type=\\"text\\" placeholder=\\"App Chain ID\\" value=\\"\\" className=\\"pt-input form-width\\" onChange={[Function: onChange]} required={true} />
              <br />
              <span className=\\"error-text\\" />
            </div>
          </div>
        </div>
      </div>
      <div className=\\"pt-dialog-footer\\">
        <div className=\\"pt-dialog-footer-actions\\">
          <Blueprint.Button text=\\"Cancel\\" onClick={[Function: onClick]} />
          <Blueprint.Button intent={0} onClick={[Function]} text=\\"Add App Integration\\" />
        </div>
      </div>
    </form>
  </Blueprint.Dialog>
</div>"
`;

exports[`AddIntegration: index render component (non Oauth mode) errorMessageFor 1`] = `null`;

exports[`AddIntegration: index render component (non Oauth mode) errorMessageFor 2`] = `null`;

exports[`AddIntegration: index render component (non Oauth mode) form fields 1`] = `
Object {
  "chainId": "",
  "errors": null,
  "form": Object {},
  "name": "",
}
`;

exports[`AddIntegration: index render component (non Oauth mode) form fields 2`] = `
Object {
  "chainId": "deadbeef",
  "errors": null,
  "form": Object {},
  "name": "bank",
}
`;

exports[`AddIntegration: index render component (non Oauth mode) form fields 3`] = `
Object {
  "chainId": "feedbeef",
  "errors": null,
  "form": Object {},
  "name": "weather",
}
`;

exports[`AddIntegration: index render component (non Oauth mode) with empty values 1`] = `
"<div>
  <Blueprint.Button onClick={[Function: onClick]} className=\\"pt-intent-primary pt-icon-add\\" style={{...}} text=\\"Add App Integration\\" />
  <Blueprint.Dialog iconName=\\"add\\" isOpen={false} onClose={[Function]} title=\\"Add App Integration\\" className=\\"pt-dark\\" canOutsideClickClose={true}>
    <form>
      <div className=\\"pt-dialog-body\\">
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              Name:
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <Field id=\\"name\\" className=\\"form-width pt-input\\" placeholder=\\"Name\\" name=\\"name\\" component=\\"input\\" dir=\\"auto\\" title=\\"name\\" onChange={[Function: onChange]} required={true} />
            <br />
            <span className=\\"error-text\\" />
          </div>
        </div>
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              App Chain ID:
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <div className=\\"form-width\\">
              <Field name=\\"chainId\\" component=\\"input\\" type=\\"text\\" placeholder=\\"App Chain ID\\" value=\\"\\" className=\\"pt-input form-width\\" onChange={[Function: onChange]} required={true} />
              <br />
              <span className=\\"error-text\\" />
            </div>
          </div>
        </div>
      </div>
      <div className=\\"pt-dialog-footer\\">
        <div className=\\"pt-dialog-footer-actions\\">
          <Blueprint.Button text=\\"Cancel\\" onClick={[Function: onClick]} />
          <Blueprint.Button intent={0} onClick={[Function]} text=\\"Add App Integration\\" />
        </div>
      </div>
    </form>
  </Blueprint.Dialog>
</div>"
`;

exports[`AddIntegration: index render component (non Oauth mode) with values 1`] = `
"<div>
  <Blueprint.Button onClick={[Function: onClick]} className=\\"pt-intent-primary pt-icon-add\\" style={{...}} text=\\"Add App Integration\\" />
  <Blueprint.Dialog iconName=\\"add\\" isOpen={false} onClose={[Function]} title=\\"Add App Integration\\" className=\\"pt-dark\\" canOutsideClickClose={true}>
    <form>
      <div className=\\"pt-dialog-body\\">
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              Name:
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <Field id=\\"name\\" className=\\"form-width pt-input\\" placeholder=\\"Name\\" name=\\"name\\" component=\\"input\\" dir=\\"auto\\" title=\\"name\\" onChange={[Function: onChange]} required={true} />
            <br />
            <span className=\\"error-text\\" />
          </div>
        </div>
        <div className=\\"row\\">
          <div className=\\"col-sm-3 text-right\\">
            <label className=\\"pt-label smd-pad-4\\">
              App Chain ID:
            </label>
          </div>
          <div className=\\"col-sm-9 smd-pad-4\\">
            <div className=\\"form-width\\">
              <Field name=\\"chainId\\" component=\\"input\\" type=\\"text\\" placeholder=\\"App Chain ID\\" value=\\"\\" className=\\"pt-input form-width\\" onChange={[Function: onChange]} required={true} />
              <br />
              <span className=\\"error-text\\" />
            </div>
          </div>
        </div>
      </div>
      <div className=\\"pt-dialog-footer\\">
        <div className=\\"pt-dialog-footer-actions\\">
          <Blueprint.Button text=\\"Cancel\\" onClick={[Function: onClick]} />
          <Blueprint.Button intent={0} onClick={[Function]} text=\\"Add App Integration\\" />
        </div>
      </div>
    </form>
  </Blueprint.Dialog>
</div>"
`;
